# dioxus_bar

./: Cargo.toml
assets/: style.css
src/: main.rs
